--- a/app/src/main/res/layout/item_tram.xml
+++ b/app/src/main/res/layout/item_tram.xml
@@ -31,28 +31,31 @@
 
     <TextView
         android:id="@+id/txt_item_destination"
+        style="@style/BoldText1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="North Richmond"
-        style="@style/BoldText1"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/txt_item_route"
-        app:layout_constraintBottom_toTopOf="@id/txt_item_scheduled"
         android:layout_marginStart="@dimen/base_dimen_4"
+        android:layout_marginEnd="@dimen/base_dimen_4"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:layout_marginBottom="@dimen/base_dimen_2"
-        />
+        app:layout_constraintBottom_toTopOf="@id/txt_item_scheduled"
+        app:layout_constraintEnd_toStartOf="@+id/txt_item_countdown"
+        app:layout_constraintStart_toEndOf="@id/txt_item_route"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="North Richmond" />
 
     <TextView
         android:id="@+id/txt_item_scheduled"
+        style="@style/SmallText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="Scheduled - 1:47 pm"
-        style="@style/SmallText"
-        app:layout_constraintTop_toBottomOf="@id/txt_item_destination"
-        app:layout_constraintStart_toStartOf="@id/txt_item_route"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="@+id/txt_item_destination"
+        app:layout_constraintStart_toStartOf="@id/txt_item_route"
+        app:layout_constraintTop_toBottomOf="@id/txt_item_destination"
+        tools:text="Scheduled - 1:47 pm" />
 
     <TextView
         android:id="@+id/txt_item_countdown"
