--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:id="@+id/btn_refresh"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Refresh"
+        android:text="@string/refresh"
         style="@style/ButtonPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="@dimen/base_dimen_8"
