--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7895FF</color>
-    <color name="colorPrimaryDark">#3F51B5</color>
+    <color name="colorPrimary">#6DC9F7</color>
+    <color name="colorPrimaryDark">#0F92D4</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
 </resources>
