--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,7 @@
     <style name="ButtonPrimary">
         <item name="android:background">@drawable/bg_button</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
