--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    android:id="@+id/coordinatorLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
-    tools:context="au.com.realestate.hometime.view.MainActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true">
 
-    <View
-        android:id="@+id/bg_content"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/bg_content"
-        android:layout_marginStart="@dimen/base_dimen_4"
-        android:layout_marginEnd="@dimen/base_dimen_4"
-        android:layout_marginBottom="@dimen/base_dimen_4"
-        app:layout_constraintTop_toTopOf="@id/rv_trams"
-        />
+    <include layout="@layout/app_content" />
 
-    <Button
-        android:id="@+id/btn_refresh"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/refresh"
-        style="@style/ButtonPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/base_dimen_8"
-        app:layout_constraintStart_toStartOf="@id/bg_content"
-        app:layout_constraintEnd_toEndOf="@id/bg_content"
-        android:layout_marginStart="@dimen/base_dimen_4"
-        android:layout_marginEnd="@dimen/base_dimen_4"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_trams"
-        android:layout_width="0dp"
-        android:layout_height="240dp"
-        app:layout_constraintBottom_toTopOf="@id/btn_refresh"
-        app:layout_constraintStart_toStartOf="@id/bg_content"
-        app:layout_constraintEnd_toEndOf="@id/bg_content"
-        android:layout_marginBottom="@dimen/base_dimen_4"
-        tools:listitem="@layout/item_tram"
-        />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
