Display lists in fragments in Viewpager

--- a/app/src/main/res/layout/fragment_trams.xml
+++ b/app/src/main/res/layout/fragment_trams.xml
@@ -2,13 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="240dp"
     tools:context=".view.TramsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_trams"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginBottom="@dimen/base_dimen_4"
+        tools:listitem="@layout/item_tram"
+        />
 
 </FrameLayout>
