--- a/app/src/main/res/layout/app_content.xml
+++ b/app/src/main/res/layout/app_content.xml
@@ -9,6 +9,13 @@
     android:background="@color/colorPrimary"
     tools:context="au.com.realestate.hometime.view.MainActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/map"
+        android:scaleType="centerCrop"
+        />
+
     <View
         android:id="@+id/bg_content"
         android:layout_width="0dp"
@@ -20,7 +27,7 @@
         android:layout_marginStart="@dimen/base_dimen_4"
         android:layout_marginEnd="@dimen/base_dimen_4"
         android:layout_marginBottom="@dimen/base_dimen_4"
-        app:layout_constraintTop_toTopOf="@id/tab"
+        app:layout_constraintTop_toTopOf="@id/view_fake_margin"
         />
 
     <Button
@@ -36,7 +43,7 @@
         android:layout_marginStart="@dimen/base_dimen_4"
         android:layout_marginEnd="@dimen/base_dimen_4"
         />
-    <androidx.viewpager2.widget.ViewPager2
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="0dp"
         android:layout_height="240dp"
@@ -46,27 +53,39 @@
         android:layout_marginBottom="@dimen/base_dimen_4"
         />
 
-    <TextView
-        android:id="@+id/tab"
+    <com.ogaclejapan.smarttablayout.SmartTabLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/view_pager_tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="North | South"
-        android:gravity="center_horizontal"
-        app:layout_constraintBottom_toTopOf="@id/viewpager"
-        android:layout_marginBottom="@dimen/base_dimen_8"
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_trams"
-        android:layout_width="0dp"
-        android:layout_height="240dp"
-        app:layout_constraintBottom_toTopOf="@id/btn_refresh"
-        app:layout_constraintStart_toStartOf="@id/bg_content"
-        app:layout_constraintEnd_toEndOf="@id/bg_content"
+        android:layout_height="@dimen/tab_height"
+        android:clipToPadding="false"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        app:stl_defaultTabTextColor="@color/black"
+        app:stl_defaultTabTextHorizontalPadding="18dp"
+        app:stl_dividerColor="@color/transparent"
+        app:stl_dividerThickness="0dp"
+        app:stl_indicatorColor="@color/primaryDark_20"
+        app:stl_indicatorCornerRadius="18dp"
+        app:stl_indicatorGravity="center"
+        app:stl_indicatorInterpolation="smart"
+        app:stl_indicatorThickness="36dp"
+        app:stl_underlineColor="@color/transparent"
+        app:stl_underlineThickness="0dp"
         android:layout_marginBottom="@dimen/base_dimen_4"
-        tools:listitem="@layout/item_tram"
+        app:layout_constraintBottom_toTopOf="@id/viewpager"
+        android:layout_marginStart="@dimen/base_dimen_8"
+        android:layout_marginEnd="@dimen/base_dimen_8"
         />
 
+    <View
+        android:id="@+id/view_fake_margin"
+        android:layout_width="1dp"
+        android:layout_height="@dimen/base_dimen_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/view_pager_tab"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
