--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#0F92D4</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="primaryDark_20">#330F92D4</color>
+    <color name="black">#000</color>
 </resources>
