--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="base_dimen_2">8dp</dimen>
     <dimen name="base_dimen_4">16dp</dimen>
     <dimen name="base_dimen_8">32dp</dimen>
+
+    <dimen name="tab_height">48dp</dimen>
 </resources>
